<resources>
    <string name="app_name">MobileApps</string>
    <string name="new_member">New Member? Register now</string>
    <string name="next">Next ></string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_in">sign in to access your account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="already_a_member">Already a member? Log In</string>
    <string name="by_checking">By checking the box you agree to our Terms and Conditions.</string>
    <string name="strong_password">Strong Password</string>
    <string name="phone_number">Phone number</string>
    <string name="valid_email">Valid email</string>
    <string name="full_name">Full name</string>
    <string name="by_creating">by creating a free account</string>
    <string name="get_started">Get Started</string>
</resources>