<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/newMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_member"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="58dp"
        android:textSize="13sp"
        />
    <Button
        android:id="@+id/next"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/newMember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="23dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:textSize="20sp"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textSize="11sp"
        android:buttonTint="#CBCBCB"
        android:layout_marginBottom="135dp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp"
        />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="11sp"
        android:textColor="@color/purple"
        android:layout_marginEnd="35dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/enter_your_email"
        android:textSize="14sp"
        android:paddingStart="22dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="25dp"
        android:drawableEnd="@drawable/mail"
        android:paddingEnd="18dp"
        />

    <ImageView
        android:src="@drawable/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/email"
        android:layout_marginStart="52dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        app:layout_constraintBottom_toTopOf="@id/sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp"
        android:textSize="24sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="65dp"
        android:textSize="14sp"
        android:textColor="#252525"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textSize="14sp"
        android:paddingStart="22dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="190dp"
        android:drawableEnd="@drawable/lock"
        android:paddingEnd="18dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>